--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>cloud-eureka-server7003</module>
         <module>cloud-provider-payment8002</module>
         <module>cloud-provider-payment8003</module>
+        <module>cloud-consumer-order81</module>
+        <module>cloud-provider-payment8004</module>
+        <module>cloud-consumer-order82</module>
     </modules>
 
     <properties>
@@ -26,12 +29,12 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <cloud-api-commons.version>1.0-SNAPSHOT</cloud-api-commons.version>
         <junit.version>4.12</junit.version>
-        <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.16.18</lombok.version>
         <mysql.version>5.1.47</mysql.version>
         <druid.version>1.1.16</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
         <hutool.version>4.5.7</hutool.version>
+        <zookeeper.version>3.4.14</zookeeper.version>
     </properties>
 
     <dependencyManagement>
@@ -69,6 +72,12 @@
                 <version>${cloud-api-commons.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${zookeeper.version}</version>
+            </dependency>
+
             <!-- mysql -->
             <dependency>
                 <groupId>mysql</groupId>
@@ -97,12 +106,6 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
-            </dependency>
-            <!--log4j-->
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${log4j.version}</version>
             </dependency>
             <!-- lombok -->
             <dependency>
