--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>cloud-consumer-order81</module>
         <module>cloud-provider-payment8004</module>
         <module>cloud-consumer-order82</module>
+        <module>cloud-gateway9527</module>
     </modules>
 
     <properties>
